Skills tab in user input fixed and Search align

--- a/client/app/less/al/misc.less
+++ b/client/app/less/al/misc.less
@@ -172,7 +172,7 @@
         color: #666;
         line-height: 49px;
         text-align: center;
-        margin-top: 15%;
+        margin-top: 10%;
     }
     .sortColumn:hover {
         cursor: pointer;
@@ -683,6 +683,12 @@
                     width: 35px;
                     padding-top: 2px;
                 }
+            }
+            .level-input{
+              width:95px;
+              .timer-container{
+                width: 50px;
+              }
             }
             .skillmodal-buttons {
                 margin-top: 30px;
